--- a/SmartDepo/SmartDepoAPI/Dockerfile
+++ b/SmartDepo/SmartDepoAPI/Dockerfile
@@ -9,19 +9,19 @@ WORKDIR /app
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["SmartDepo/SmartDepo.csproj", "SmartDepo/"]
-RUN dotnet restore "./SmartDepo/SmartDepo.csproj"
+COPY ["SmartDepoAPI/SmartDepoAPI.csproj", "SmartDepoAPI/"]
+RUN dotnet restore "./SmartDepoAPI/SmartDepoAPI.csproj"
 COPY . .
-WORKDIR "/src/SmartDepo"
-RUN dotnet build "./SmartDepo.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/SmartDepoAPI"
+RUN dotnet build "./SmartDepoAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./SmartDepo.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./SmartDepoAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "SmartDepo.dll"]
+ENTRYPOINT ["dotnet", "SmartDepoAPI.dll"]
