--- a/SmartDepo/SmartDepoAPI/appsettings.json
+++ b/SmartDepo/SmartDepoAPI/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BackendUrl": "http://localhost:7002",
+  "FrontendUrl": "http://localhost:7001"
 }
